[package]
name = "kchat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.uuid]
version = "0.8.2"
features = [
    "v4",
]

[workspace]
members = [
    "kmp-parser",
    "kchat-server",
]